# MESH-Align

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
app/: AppState.h  CMakeLists.txt  Panels.cpp  Panels.h  PipelineRunner.h  app_icon.h  main.cpp  meshalign.rc.in
assets/: icon.icns  meshalign.desktop
cmake/: dependencies.cmake  get_cpm.cmake
core/: CMakeLists.txt
core/include/ma/: AnalysisPipeline.h  Bvh.h  CylinderExtractor.h  Deviation.h  Geometry.h  IO.h  Mesh.h  MeshValidation.h  Orienter.h  Picking.h  PlaneExtractor.h  PrimitiveMeshes.h  SymmetryDetector.h  Types.h
core/src/: AnalysisPipeline.cpp  Bvh.cpp  CylinderExtractor.cpp  Deviation.cpp  Geometry.cpp  Mesh.cpp  MeshValidation.cpp  Orienter.cpp  Picking.cpp  PlaneExtractor.cpp  PrimitiveMeshes.cpp  SymmetryDetector.cpp
core/src/io/: IO.cpp  LoadOBJ.cpp  LoadPLY.cpp  LoadSTL.cpp
docs/: ALGORITHMS.md  ARCHITECTURE.md  PLAN.md
render/: CMakeLists.txt
render/include/ma_gl/: Camera.h  Framebuffer.h  GL.h  Heatmap.h  MeshRenderer.h  PlaneRenderer.h  Shader.h  TriadRenderer.h
render/src/: Camera.cpp  Framebuffer.cpp  Heatmap.cpp  MeshRenderer.cpp  PlaneRenderer.cpp  Shader.cpp  TriadRenderer.cpp
samples/: cylinder.stl  part.ply  part_scan.ply  part_tilted.ply
tests/: CMakeLists.txt  analysis_tests.cpp  deviation_tests.cpp  io_tests.cpp  picking_tests.cpp  test_mesh.cpp
